# gomoku-ansi-c

./: .env.sample  .envrc  .gitignore  .gitmodules  .shellcheckrc  AGENT.md  CLAUDE.md  CLUSTER.md  CMakeLists.txt  Dockerfile  HTTPD.md  Makefile  OVERVIEW.md  README.md  gomoku  justfile  lefthook.yml  test_daemon  tests-setup
.artifacts/: README.md
.claude/: branch-name.sh  settings.json
.codex/: mcp.json
.cursor/: rules
api/: .dockerignore  .env.ci  .env.development  .env.example  .env.test  .envrc  .gitignore  .secrets.baseline  Dockerfile  README.md  alembic.ini  justfile  lefthook.yml  pyproject.toml
api/app/: __init__.py  auth_gcp.py  config.py  database.py  elo.py  logger.py  logging_config.py  main.py  scoring.py  security.py  session.py  telemetry.py
api/app/cli/: __init__.py  __main__.py  leaderboard.py  main.py
api/app/middleware/: client_ip.py  request_logging.py
api/app/models/: game.py  leaderboard.py  multiplayer.py  types.py  user.py
api/app/multiplayer/: __init__.py  allocate.py  codes.py  urls.py  win_detector.py
api/app/routers/: auth.py  chat.py  game.py  leaderboard.py  multiplayer.py  social.py  user.py
api/app/services/: __init__.py  email.py
api/db/migrations/: env.py
api/db/migrations/versions/: 20260404-120000-create-users.py  20260404-120001-create-password-reset-tokens.py  20260404-120002-create-games.py  20260404-120003-create-leaderboard.py  20260405-120000-add-user-profile-fields.py  20260501-120100-create-multiplayer-games.py  20260501-130000-add-opponent-id-to-games.py  20260501-140000-add-elo-rating.py  20260501-150000-add-social-and-chat.py  20260501-160000-add-created-via-to-multiplayer-games.py  20260501-170000-add-presence-and-targeted-invites.py
api/public/: index.html
api/public/assets/: index-Bfet4Rwr.js  index-i0WCu9sm.css
api/tests/: conftest.py  test_auth.py  test_chat_invite.py  test_client_ip.py  test_config.py  test_database.py  test_elo.py  test_game.py  test_leaderboard.py  test_logger.py  test_main.py  test_migrations.py  test_multiplayer.py  test_scoring.py  test_security.py  test_session.py  test_social.py  test_user.py
config/: Brewfile  README.md  gomoku-json-schema.json  sample-game.json
doc/: AI-ENGINE.md  (+33 more)
gomoku-c/src/: CMakeLists.txt
gomoku-c/src/gomocup/: README.md  coords.c  coords.h  main.c  metadata.h  protocol.c  protocol.h  time_budget.c  time_budget.h
gomoku-c/src/gomoku/: ai.c  ai.h  ansi.h  board.c  board.h  cli.c  cli.h  game.c  game.h  gomoku.h  main.c  ui.c
gomoku-c/src/net/: cli.c  cli.h  handlers.c  handlers.h  json_api.c  json_api.h  logger.c  main.c  test_client.c  test_client_utils.c
(+279 files in other folders)
