[project]
name = "gomoku-api"
version = "0.1.0"
description = "FastAPI service for Gomoku: auth, game proxy, scoring, leaderboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "asyncpg>=0.30",
    "httpx>=0.28",
    "pyjwt>=2.10",
    "bcrypt>=4.2",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
]

[dependency-groups]
dev = [
    "httpx",
    "ruff>=0.9",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-coverage>=0.0",
    "httpx",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
